--- a/resources/assets/site/css/style.css
+++ b/resources/assets/site/css/style.css
@@ -34,7 +34,7 @@ body {
     width: 100%;
     overflow-x: hidden;
     font-family: brando;
-    color: #fdf5ec;
+    /* color: #fdf5ec; */
   }
 
   html {
